--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 
 <meta name="dc:creator" content="thauan" />
 <meta name="dc:title" content="Dragon Ball e As Esferas da Usabilidade" />
-<link rel="stylesheet" href="../style/style.css">
+<link rel="stylesheet" href="style.css">
 <title>
 Dragon Ball e As Esferas da Usabilidade
 </title>
