--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 
 <meta name="dc:creator" content="thauan" />
 <meta name="dc:title" content="Dragon Ball e As Esferas da Usabilidade" />
-<link rel="stylesheet" href="https://github.com/thauanoliveiraa/DragonBallQuizGame/main/style">
+<link rel="stylesheet" href="https://thauanoliveiraa.github.io/DragonBallQuizGame/style/style.css">
 <title>
 Dragon Ball e As Esferas da Usabilidade
 </title>
