--- a/index.htm
+++ b/index.htm
@@ -18,6 +18,26 @@ Dragon Ball e As Esferas da Usabilidade
     margin: 0%;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
+body::-webkit-scrollbar {
+    width: 11px;       
+  }
+  
+  body::-webkit-scrollbar-track {
+    background-color: rgb(0, 0, 0);
+
+  } 
+  
+  body::-webkit-scrollbar-thumb {
+    width: 10px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+    border: 3px solid rgb(255, 255, 255);
+  }	
+	
 body{
     font-family: 'Bangers', cursive; 
 }
